Fixed bug, main container was too close to the wall

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -49,5 +49,6 @@ body {
   .container {
     width: 50%;
     float: right;
+    padding-right: 1em;
   }
 }
